--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -1,70 +1,103 @@
-/* --- put your css here --- */ 
-body {background-color: skyblue;}
-.igottabeme {font-family: Arial, Helvetica, sans-serif; }
-.classy {padding-left: 10px; }
-div {margin-bottom: 50px;}
+/* Number 2 */
+body {
+	background-color: skyblue;
+}
+
+/* Number 3 */
+.igottabeme {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Number 4 */
+.classy {
+	padding-left: 10px;
+}
+
+/* Number 5 */
+div {
+	margin-bottom: 50px;
+}
+
+/* Number 6 */
 span {
-  height: 100px;
-  width: 50px;
-  padding: 5px 20px;
-  border-style: solid;
-  border-width: 5px;
-  border-color: blue;
-  background-color: yellow;
+	height: 100px;
+	width: 50px;
+	padding: 5px 20px;
+	border-style: solid;
+	border-width: 5px;
+	border-color: blue;
+	background-color: yellow;
 }
-span.b{
-  display: block;
+/* Number 7 */
+span.b {
+	display: block;
 }
 
-span.c{
-  display: inline-block;
+/* Number 7 */
+span.c {
+	display: inline-block;
 }
+
+/* Number 8 */
 img[alt="cat icon"] {
-  position: fixed;
-  bottom: 0;
-  right: 0;
+	position: fixed;
+	bottom: 0;
+	right: 0;
 }
+
+/* Number 9 */
 img[alt="dog icon"] {
-  position:relative; 
-  left: -50px; 
-  top: -150px;
+	position: relative;
+	left: -50px;
+	top: -150px;
 }
 
-div[id = positionMe]{background-color: orange;}
+/* Number 10 */
+div[id=positionMe] {
+	background-color: orange;
+}
 
+/* Number 10 */
 img[alt="bird icon"] {
-  position:relative; 
-  left: 250px; 
-  top: 200px;
+	position: relative;
+	left: 250px;
+	top: 200px;
 }
 
+/* Number 11 */
 nav {
-  position: sticky;
-  background-color:green;
-  opacity: 90%;
-  top: 0px;
-  padding: 5px;
-  font-size: 20px;
+	position: sticky;
+	background-color: green;
+	opacity: 90%;
+	top: 0px;
+	padding: 5px;
+	font-size: 20px;
 }
 
 
 /* --- pre-existing css --- */
+
 .stripey tr:nth-child(even) {
-  background-color: gray;
+	background-color: gray;
 }
+
 .stripey tr:nth-child(odd) {
-  background-color: white;
+	background-color: white;
 }
+
 .stripey th {
-  color: white;
-  background-color: black;
+	color: white;
+	background-color: black;
 }
+
 .mousey td:hover {
-  background-color: yellow;
+	background-color: yellow;
 }
+
 .rightey td {
-  text-align: right;
+	text-align: right;
 }
+
 input[type="text"].pinkey:focus {
-  background-color: pink;
+	background-color: pink;
 }
